# push-fns

./: .releaserc.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_HEADER.md  build.rs  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  release-artifacts.yml
src/: args.rs  aws.rs  gcp.rs  lib.rs  main.rs  search.rs  upload.rs  zip.rs
src/upload/: aws_s3.rs  google_cloud_storage.rs
tests/: aws_s3.rs  google_cloud_storage.rs  search.rs  zip.rs
