[package]
name = "push-fns"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "push_fns"
path = "src/lib.rs"

[[bin]]
name = "push-fns"
path = "src/main.rs"

[dependencies]
aws-config = "0.55.1"
aws-sdk-s3 = "0.27.0"
clap = { version = "4.2.5", features = ["derive"] }
glob = "0.3.1"
google-cloud-default = { version = "0.2.0", features = [
  "storage",
  "rustls-tls",
] }
google-cloud-storage = { version = "0.11.0", features = [
  "trace",
  "rustls-tls",
] }
tokio = { version = "1.28.0", features = ["full"] }
zip = "0.6.4"
