[package]
name = "push-fns"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple tool to upload serverless function assets"
readme = "README.md"
keywords = ["cli", "aws", "gcp", "lambda", "zip"]
categories = ["command-line-utilities"]
build = "build.rs"
homepage = "https://github.com/bbeesley/push-fns"
repository = "https://github.com/bbeesley/push-fns"

[dependencies]
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"
clap = { version = "4.2.5", features = ["derive"] }
glob = "0.3.1"
google-cloud-default = { version = "0.3.0", features = [
  "storage",
  "rustls-tls",
] }
google-cloud-storage = { version = "0.11.0", features = [
  "trace",
  "rustls-tls",
] }
tokio = { version = "1.28.0", features = ["full"] }
zip = "0.6.4"

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
clap = { version = "4.2.5", features = ["derive"] }
clap-markdown = "0.1.3"
clap_builder = "4.3.0"
clap_complete = "4.3.0"
clap_mangen = "0.2.11"
